<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Tetris4Android</string>
    <string name="mode_end">종료</string>
    <string name="mode_pause">잠시 중단됨</string>
    <string name="mode_ready">가운데 버튼 누르면 시작\nwww.androidside.com</string>
    <string name="right">right</string>
    <string name="start">start</string>
    <string name="left">left</string>
    <string name="down">down</string>
    <string name="score">제점수는요</string>

</resources>