<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainFrame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

   	 >
    

    <com.example.lastclient.TetrisView
        android:id="@+id/Tetris"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <Button 
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="400dp"
            android:layout_marginTop="200dp"
            android:textColor="#000000"
            android:text="제점수는요"
            
            
            
            />

        <TextView
            android:id="@+id/MessageDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/title_text"
            android:textColor="#00000000"
            android:textSize="24sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/MessageDisplay"
            android:background="#00000000"
            android:text="@string/right"
            android:textColor="#00000000" />

        <Button
            android:id="@+id/btn_left"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/MessageDisplay"
            android:background="#00000000"
            android:text="@string/left"
            android:textColor="#00000000" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_left"
            android:background="#00000000"
            android:text="@string/start"
            android:textColor="#0000FF" />

        <Button
            android:id="@+id/btn_down"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:text="@string/down"
            android:textColor="#00000000" />

    </RelativeLayout>

</FrameLayout>